[package]
name = "aws-s3-progress"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"

http = "0.2.9"
bytes = "1.5.0"
http-body = "0.4.5"
pin-project = "1.1.3"
aws-smithy-http = "0.56.1"

tokio = { version = "1.33.0", features = ["full"] }
